--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <TextBox x:Name="txtInput" HorizontalAlignment="Left" Height="23" Margin="227,222,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="lblOutput" Content="Label" HorizontalAlignment="Left" Margin="246,277,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </Window>
